[package]
name = "abyss_engine"
version = "0.1.0"
authors = ["HurricaneInteractive <hurricane.interactive@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
